--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "docpad-plugin-bitcoinsvg": "~2.0.1",
     "docpad-plugin-cleanurls": "~2.8.1",
     "docpad-plugin-coffeescript": "~2.5.0",
+    "docpad-plugin-dce": "^0.9.2",
     "docpad-plugin-downloader": "~2.1.4",
     "docpad-plugin-eco": "~2.1.0",
     "docpad-plugin-ghpages": "~2.4.4",
@@ -43,8 +44,7 @@
     "docpad-plugin-stylus": "~2.9.0",
     "docpad-plugin-text": "~2.3.3"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
     "start": "node_modules/docpad/bin/docpad-server"
